kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icgroup-ingress              # Nom de l'ingress
  namespace: icgroup                 # Namespace où il sera déployé
spec:
  ingressClassName: nginx            # Utilisation du contrôleur NGINX Ingress
  rules:
    - host: ic-webapp.icgroup.fr     # Domaine pour l'application web principale
      http:
        paths:
          - path: /                  # Route racine
            pathType: Prefix         # Correspond à tous les chemins commençant par /
            backend:
              service:
                name: ic-webapp-service  # Service Kubernetes ciblé
                port:
                  number: 8080           # Port exposé par le service

    - host: odoo.icgroup.fr          # Domaine pour Odoo
      http:
        paths:
          - path: /                  # Route racine
            pathType: Prefix
            backend:
              service:
                name: odoo-service   # Service Odoo
                port:
                  number: 8069       # Port standard d'Odoo

    - host: pgadmin.icgroup.fr       # Domaine pour PgAdmin
      http:
        paths:
          - path: /                  # Route racine
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service  # Service PgAdmin
                port:
                  number: 80            # Port HTTP classique
